--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -79,7 +79,11 @@
             <version>1.5.5.Final</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
+        </dependency> 
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
