--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.application.name=EMYMNG
 spring.datasource.url=jdbc:postgresql://localhost:5432/emymng_db
 spring.datasource.username=postgres
 spring.datasource.password=12345a
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 
 #for detailed SQL logging
 spring.jpa.show-sql=true
